@@ -79,8 +79,9 @@ class XiaoluMama(models.Model):
     charge_time = models.DateTimeField(default=datetime.datetime.now,
                                        db_index=True,blank=True,null=True,verbose_name=u'接管时间')
     
-    created = models.DateTimeField(auto_now_add=True,verbose_name=u'创建时间')
-    status  = models.CharField(max_length=16,blank=True,choices=STATUS_CHOICES,
+    created  = models.DateTimeField(auto_now_add=True,verbose_name=u'创建时间')
+    modified = models.DateTimeField(auto_now=True,verbose_name=u'修改时间')
+    status   = models.CharField(max_length=16,blank=True,choices=STATUS_CHOICES,
                                default=EFFECT,verbose_name=u'状态')
     
     charge_status = models.CharField(max_length=16,blank=True,db_index=True,
@@ -582,7 +583,7 @@ def update_Xlmm_Agency_Progress(obj,*args,**kwargs):
         if xlmms.count() > 0 :
             xlmm = xlmms[0]
             xlmm.progress = XiaoluMama.PAY
-            xlmm.save()
+            update_model_fields(xlmm,update_fields=['progress'])
             
 signal_saletrade_pay_confirm.connect(update_Xlmm_Agency_Progress,sender=SaleTrade)
 
